Only show cookie exception when signed in

We should only show the exception about not getting signed out when
the user is actually signed in and cookies will be recreated on
deletion.

Bug: 860290
Cq-Include-Trybots: luci.chromium.try:closure_compilation
Change-Id: I03577189ec114513c2a341b4cf05eab47a8339fb
Reviewed-on: https://chromium-review.googlesource.com/1136293
Reviewed-by: Martin Šrámek <msramek@chromium.org>
Reviewed-by: Dave Schuyler <dschuyler@chromium.org>
Reviewed-by: David Roger <droger@chromium.org>
Commit-Queue: Christian Dullweber <dullweber@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575209}
Former-commit-id: f285088be08c8844611c70577c85c8212e0f6fab